--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <title>Document</title>
   <script async defer src="timeline.js"></script>
 </head>
-<body>
-  <canvas id="timeline" width="1024" height="50"></canvas>
-  <div>
-    play time : <span id="logger">0.0</span>
+<body style="background-color: #222222;">
+  <div style="width: 90%">
+    <canvas id="timeline" style="background-color: #272A33;" height="50"></canvas>
+  </div>
+  <div style="color: white;">
+    <span id="logger">0.0</span>
   </div>
 </body>
 </html>
