--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
   <div style="color: white;">
     <span id="logger">0.0</span>
   </div>
+  <div>
+    <button onclick="toggle()">scale toggle</button>
+  </div>
 </body>
 </html>
