--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <span id="logger">0.0</span>
   </div>
   <div>
-    <button onclick="toggle()">scale toggle</button>
+    <select id="scaleSelectBox" onchange="scaleSelected(this)">
+      <option value="oneMin">oneMin</option>
+      <option value="tenMin">tenMin</option>
+      <option selected value="oneHour">oneHour</option>
+      <option value="threeHour">threeHour</option>
+      <option value="sixHour">sixHour</option>
+    </select>
   </div>
 </body>
 </html>
