--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </div>
   <div>
     <select id="scaleSelectBox" onchange="scaleSelected(this)">
-      <option value="oneMin">oneMin</option>
+      <option selected value="oneMin">oneMin</option>
       <option value="tenMin">tenMin</option>
-      <option selected value="oneHour">oneHour</option>
+      <option value="oneHour">oneHour</option>
       <option value="threeHour">threeHour</option>
       <option value="sixHour">sixHour</option>
     </select>
