--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <option value="threeHour">threeHour</option>
       <option value="sixHour">sixHour</option>
     </select>
+    <button id="createClip" onclick="clipCreate()">clipToggle</button>
   </div>
 </body>
 </html>
